@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 1.0.12 March 23, 2014
+
+* Rails 4.1.0 changes the application.css file
+
 h3. 1.0.11 March 8, 2014
 
 * Foundation 5.2 no longer needs a 'span' in the navigation bar
